# StarBreaker

./: .gitignore  Cargo.toml  ci.yml
.github/: copilot-instructions.md
crates/starbreaker-core/: Cargo.toml
crates/starbreaker-core/src/: error.rs  lib.rs  types.rs
crates/starbreaker-datacore/: Cargo.toml
crates/starbreaker-datacore/src/: dependency_graph.rs
crates/starbreaker-export/: Cargo.toml
crates/starbreaker-export/src/: lib.rs
crates/starbreaker-export/src/gltf/: exporter.rs  mod.rs
crates/starbreaker-export/src/json/: mod.rs
crates/starbreaker-export/src/textures/: converter.rs  decompressor.rs  mod.rs
crates/starbreaker-gui/: Cargo.toml
crates/starbreaker-gui/src/: app.rs  lib.rs  main.rs  state.rs  theme.rs
crates/starbreaker-gui/src/panels/: debug_console.rs  file_browser.rs  inspector.rs  mod.rs  preview.rs  search.rs  settings.rs  status.rs
crates/starbreaker-gui/src/widgets/: export_dialog.rs  mod.rs  tree.rs
crates/starbreaker-parsers/: Cargo.toml
crates/starbreaker-parsers/examples/: lazy_dcb_loading.rs
crates/starbreaker-parsers/src/: lib.rs  logging.rs  parser_benchmarks.rs  registry.rs  traits.rs
crates/starbreaker-parsers/src/cgf/: bones.rs  chunks.rs  mesh.rs  mod.rs
crates/starbreaker-parsers/src/dcb/: datacore.rs  interner.rs  mod.rs  records.rs  structs.rs
crates/starbreaker-parsers/src/dcb/docs/: README.md
crates/starbreaker-parsers/src/dds/: combiner.rs  format.rs  header.rs  mod.rs
crates/starbreaker-parsers/src/p4k/: archive.rs  compression.rs  entry.rs  mod.rs
crates/starbreaker-parsers/tests/: p4k_tests.rs
crates/starbreaker-render/: Cargo.toml
crates/starbreaker-tools/: Cargo.toml
crates/starbreaker-tools/src/: diff.rs
crates/starbreaker-vfs/: Cargo.toml
crates/starbreaker-vfs/src/: cache.rs  lib.rs  mod.rs  mount.rs  node.rs  p4k.rs  path.rs  search.rs  stream.rs  tree.rs
docs/: ARCHITECTURE.md  README.md  TODO.md
src/: Directory.Build.props  main.rs
src/StarBreaker.Common/Extensions/: StreamExtensions.cs
src/StarBreaker.Sandbox/: StarBreaker.Sandbox.csproj
src/StarBreaker.Wwise/: StarBreaker.Wwise.csproj
src/StarBreaker/Services/P4kService/: P4kService.cs
