[package]
name = "StarBreaker"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/starbreaker-core",
    "crates/starbreaker-datacore",
    "crates/starbreaker-export",
    "crates/starbreaker-gui",
    "crates/starbreaker-parsers",
    "crates/starbreaker-render",
    "crates/starbreaker-vfs"
    ]

[dependencies]
starbreaker-core = { path = "crates/starbreaker-core" }
starbreaker-datacore = { path = "crates/starbreaker-datacore" }
starbreaker-export = { path = "crates/starbreaker-export" }
starbreaker-gui = { path = "crates/starbreaker-gui" }
starbreaker-parsers = { path = "crates/starbreaker-parsers" }
starbreaker-render = { path = "crates/starbreaker-render" }
starbreaker-vfs = { path = "crates/starbreaker-vfs" }
# GUI dependencies
eframe = "0.29"
egui = "0.29"
