[package]
name = "starbreaker-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
starbreaker-core = { path = "../starbreaker-core" }
starbreaker-parsers = { path = "../starbreaker-parsers" }
starbreaker-vfs = { path = "../starbreaker-vfs" }
starbreaker-export = { path = "../starbreaker-export" }

eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.15"  # File dialogs
parking_lot = "0.12"
anyhow = "1.0"
chrono = "0.4"
