[package]
name = "starbreaker-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
starbreaker-core = { path = "../starbreaker-core" }
starbreaker-parsers = { path = "../starbreaker-parsers" }
starbreaker-vfs = { path = "../starbreaker-vfs" }
starbreaker-export = { path = "../starbreaker-export" }

eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
rfd = "0.16.0"  # File dialogs
parking_lot = "0.12"
anyhow = "1.0"
chrono = "0.4"
