[package]
name = "starbreaker-parsers"
version = "0.1.0"
edition = "2021"
description = "File format parsers for Star Citizen data files"
license = "MIT"

[dependencies]
# Core
thiserror = "2.0.17"
parking_lot = "0.12"
once_cell = "1.19"
smallvec = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
lasso = "0.7"

# Compression
flate2 = "1.0"
zstd = "0.13"
lz4_flex = "0.12.0"
crc32fast = "1.3"

# Performance
memmap2 = "0.9"
bytes = "1.5"
rayon = "1.8"

# Binary parsing
byteorder = "1.5"

[dev-dependencies]
proptest = "1.4"
criterion = "0.8.1"