[package]
name = "starbreaker-parsers"
version = "0.1.0"
edition = "2021"
description = "File format parsers for Star Citizen data files"
license = "MIT"

[dependencies]
# Core
thiserror = "2.0.17"
parking_lot = "0.12"
once_cell = "1.19"
smallvec = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
lasso = { version = "0.7", features = ["multi-threaded"] }

# Compression
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.28.1"
crc32fast = "1.3"

# Performance
memmap2 = "0.9"
bytes = "1.5"
rayon = "1.8"

# Binary parsing
byteorder = "1.5"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
mpsc = "0.2.6"

[dev-dependencies]
proptest = "1.4"
criterion = "0.8.1"